# idris2-quickdocs

./: .gitignore  README.md  app.js  index.html  mkhome.py  mkindex.py  publish  publish_to_gh_pages  publish_to_surge  pyproject.toml  rebuild_all.sh  rebuild_from_idris2_docs  rebuild_libs  refresh  style.css
_app/: error.svelte-8ac99b37.js  layout.svelte-072bb07e.js  manifest.json  start-1cce4f07.js  start-45f6477f.js  start-77938309.js  version.json
_app/chunks/: index-474c3a75.js
_app/pages/: index.svelte-6c551e01.js  index.svelte-a2a09ad8.js
data/: home.html  index.json
data/base/: index.html
data/contrib/: index.html
data/idris2/: Builtin.html  Control.ANSI.CSI.html  Control.ANSI.SGR.html  Control.ANSI.html  Control.Algebra.Implementations.html  Control.Algebra.html  Control.App.Console.html  Control.App.FileIO.html  Control.App.html  Control.Applicative.Const.html  Control.Arrow.html  Control.Category.html  Control.Function.FunExt.html  Control.Function.html  Control.Linear.LIO.html  Control.Linear.Network.html  Control.Monad.Algebra.html  Control.Monad.Either.html  Control.Monad.Error.Either.html  Control.Monad.Error.Interface.html  Control.Monad.Identity.html  Control.Monad.Maybe.html  Control.Monad.RWS.CPS.html  Control.Monad.RWS.Interface.html  Control.Monad.Reader.Interface.html  Control.Monad.Reader.Reader.html  Control.Monad.Reader.html  Control.Monad.ST.html  Control.Monad.State.Interface.html  Control.Ord.html  (+177 more)
site/: .gitignore  README.md  archive  package  package.json  pnpm-lock.yaml  publish  svelte.config.js
templates/: home.md.j2
(+450 files in other folders)
